--- a/Software/Weerstation.ioc
+++ b/Software/Weerstation.ioc
@@ -1,162 +1,33 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00506682
 KeepUserPlacement=false
+Mcu.CPN=STM32L051C8T3
 Mcu.Family=STM32L0
-Mcu.IP0=ADC
-Mcu.IP1=I2C1
-Mcu.IP10=TIM22
-Mcu.IP2=LPUART1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
-Mcu.IP9=TIM21
-Mcu.IPNb=11
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IPNb=3
 Mcu.Name=STM32L051C(6-8)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC13
-Mcu.Pin1=PA0
-Mcu.Pin10=PB1
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PB12
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
-Mcu.Pin2=PA1
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=VP_ADC_TempSens_Input
-Mcu.Pin3=PA2
-Mcu.Pin30=VP_RTC_VS_RTC_Activate
-Mcu.Pin31=VP_RTC_VS_RTC_Calendar
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=33
+Mcu.Pin0=PA12
+Mcu.Pin1=VP_SYS_VS_Systick
+Mcu.PinsNb=2
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L051C8Tx
-MxCube.Version=6.4.0
-MxDb.Version=DB.6.0.40
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
-PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=BATTERY_VOLTAGE
-PA0.Locked=true
-PA0.Mode=IN0
-PA0.Signal=ADC_IN0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=SENSE_CSS
-PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=BME280_CS
-PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA11.Mode=Full_Duplex_Master
-PA11.Signal=SPI1_MISO
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=DEBUG_LED
 PA12.Locked=true
 PA12.Signal=GPIO_Output
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_SWCLK
-PA15.Mode=NSS_Signal_Hard_Output
-PA15.Signal=SPI1_NSS
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=DIO0
-PA2.Signal=S_TIM21_CH1
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=POWER_ENABLE
-PA3.Locked=true
-PA3.Signal=S_TIM2_CH4
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=WATER_METER
-PA4.Locked=true
-PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ANEMOMETER
-PA5.Mode=IN5
-PA5.Signal=ADC_IN5
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=WIND VANE
-PA6.Mode=IN6
-PA6.Signal=ADC_IN6
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=SOLAR_VOLTAGE
-PB0.Mode=IN8
-PB0.Signal=ADC_IN8
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ADC_IN9 (LIGHT_NV)
-PB1.Mode=IN9
-PB1.Signal=ADC_IN9
-PB10.Mode=Asynchronous
-PB10.Signal=LPUART1_TX
-PB11.Mode=Asynchronous
-PB11.Signal=LPUART1_RX
-PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=CUSTOM_03
-PB12.Locked=true
-PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=CUSTOM_02
-PB13.Locked=true
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=DIO5
-PB14.Locked=true
-PB14.Signal=S_TIM21_CH2
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=CUSTOM_00
-PB15.Locked=true
-PB15.Signal=GPIO_Output
-PB3.Mode=Full_Duplex_Master
-PB3.Signal=SPI1_SCK
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TIM22_CH1 (Wake_CSS)
-PB4.Signal=S_TIM22_CH1
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=INT_CSS
-PB5.Locked=true
-PB5.Signal=GPIO_Input
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=RESET_CSS
-PB8.Locked=true
-PB8.Signal=GPIO_Output
-PC13.Mode=SYS_WakeUp1
-PC13.Signal=SYS_WKUP2
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -185,70 +56,40 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM22_Init-TIM22-false-HAL-true,9-MX_TIM21_Init-TIM21-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true
-RCC.AHBFreq_Value=24000000
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=24000000
-RCC.APB2Freq_Value=24000000
-RCC.APB2TimFreq_Value=24000000
-RCC.FCLKCortexFreq_Value=24000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=24000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=24000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=24000000
-RCC.LPUARTFreq_Value=24000000
+RCC.I2C1Freq_Value=32000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIMFreq_Value=32000000
+RCC.LPUARTFreq_Value=32000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=24000000
+RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=24000000
-RCC.PWRFreq_Value=24000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMUL=RCC_PLLMUL_4
+RCC.PWRFreq_Value=32000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=24000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIMFreq_Value=24000000
-RCC.TimerFreq_Value=24000000
-RCC.USART1Freq_Value=24000000
-RCC.USART2Freq_Value=24000000
-RCC.VCOOutputFreq_Value=48000000
+RCC.TIMFreq_Value=32000000
+RCC.TimerFreq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
+RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
-SH.S_TIM21_CH1.0=TIM21_CH1,Output Compare1 CH1
-SH.S_TIM21_CH1.ConfNb=1
-SH.S_TIM21_CH2.0=TIM21_CH2,Output Compare2 CH2
-SH.S_TIM21_CH2.ConfNb=1
-SH.S_TIM22_CH1.0=TIM22_CH1,Output Compare1 CH1
-SH.S_TIM22_CH1.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,Output Compare4 CH4
-SH.S_TIM2_CH4.ConfNb=1
-SPI1.CalculateBaudRate=12.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
-SPI1.VirtualType=VM_MASTER
-TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-Output Compare2 CH2,Channel-Output Compare4 CH4
-TIM21.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM21.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM21.IPParameters=Channel-Output Compare1 CH1,Channel-Output Compare2 CH2
-TIM22.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM22.IPParameters=Channel-Output Compare1 CH1
-VP_ADC_TempSens_Input.Mode=IN-TempSens
-VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
-VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
+isbadioc=false
